{
    "version": 1,
    "name": "InputSystem",
    "maps": [
        {
            "name": "Action Menu",
            "id": "b83cfb5e-0602-450e-bad6-3c2b52ce3e9a",
            "actions": [
                {
                    "name": "MoveToggle",
                    "type": "Button",
                    "id": "05c88691-c3e8-44fb-a0db-74586b1c5bc8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryToggle",
                    "type": "Button",
                    "id": "69755e6b-4386-4754-b57c-47f8670d30ea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "552fd6e8-885f-4aa5-9a84-d40a045e5b76",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MoveToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f559105-571e-4496-9e23-2e90c46010b7",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "InventoryToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}